GPC/tests/examples/fail/constructArray.gpc

GPRM::Kernel::Test a[5];

a = GPRM::Kernel::Test::Test(); // a is the array of objects

int GPRM::Test::constructArray() {
    return 0;
}
